--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
+<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:android="http://schemas.android.com/apk/res/android">
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="match_parent">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -79,18 +78,17 @@
                             app:place="신촌/홍대"
                         >
                         </com.yamigu.yamigu_app.WaitingTeamCard>
+
                         <com.yamigu.yamigu_app.WaitingTeamCard
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center_vertical"
                             android:layout_marginLeft="-18dp"
-                            app:description="한명이 술을 잘 못마셔요!"
-                            app:profile1="연세대학교 (24)"
-                            app:profile2="전기전자공학부"
                             app:date="5월28일"
+                            app:description="한명이 술을 잘 못마셔요!"
                             app:place="신촌/홍대"
-                            >
-                        </com.yamigu.yamigu_app.WaitingTeamCard>
+                            app:profile1="연세대학교 (24)"
+                            app:profile2="전기전자공학부"></com.yamigu.yamigu_app.WaitingTeamCard>
                     </LinearLayout>
                 </HorizontalScrollView>
             </FrameLayout>
@@ -105,14 +103,39 @@
             android:scaleType="fitStart"/>
         <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="311dp"
+            android:layout_height="wrap_content"
             android:background="@color/colorBorder">
             <FrameLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="@color/colorBackground"
                 android:layout_margin="1dp">
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+                    <com.yamigu.yamigu_app.TodayScheduledTeamCard
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical|center_horizontal"
+                        android:layout_marginBottom="-18dp"
+                        app:place="신촌/홍대"
+                        app:man="연세대학교 24살"
+                        app:woman="이화여자대학교 21살"
+                        >
+                    </com.yamigu.yamigu_app.TodayScheduledTeamCard>
+                    <com.yamigu.yamigu_app.TodayScheduledTeamCard
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical|center_horizontal"
+                        app:place="건대/왕십리"
+                        app:man="고려대학교 22살"
+                        app:woman="연세대학교 22살"
+                        >
+                    </com.yamigu.yamigu_app.TodayScheduledTeamCard>
+                </LinearLayout>
             </FrameLayout>
+
         </FrameLayout>
     </LinearLayout>
 </android.support.constraint.ConstraintLayout>
