--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -1,11 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-<declare-styleable name="MeetingTeamHome">
+<declare-styleable name="MeetingTeam">
     <attr name="label" format="reference|integer" />
+    <attr name="place" format="reference|string" />
+</declare-styleable>
+<declare-styleable name="MeetingTeamHome" parent="MeetingTeam">
+    <attr name="label" />
+    <attr name="place" />
     <attr name="description" format="reference|string" />
     <attr name="profile1" format="reference|string" />
     <attr name="profile2" format="reference|string" />
     <attr name="date" format="reference|string" />
-    <attr name="place" format="reference|string" />
+</declare-styleable>
+<declare-styleable name="ScheduledTeamHome" parent="MeetingTeam">
+    <attr name="label"/>
+    <attr name="place"/>
+    <attr name="man" format="reference|string" />
+    <attr name="woman" format="reference|string" />
 </declare-styleable>
 </resources>
