--- a/app/src/main/res/layout/activity_meeting_application.xml
+++ b/app/src/main/res/layout/activity_meeting_application.xml
@@ -32,7 +32,7 @@
             <RelativeLayout
                 android:id="@+id/selected_type"
                 android:layout_width="match_parent"
-                android:layout_height="81dp"
+                android:layout_height="50dp"
                 android:background="#32A4E0"
                 android:orientation="horizontal">
                 <LinearLayout
@@ -57,7 +57,7 @@
             <RelativeLayout
                 android:id="@+id/selected_date"
                 android:layout_width="match_parent"
-                android:layout_height="81dp"
+                android:layout_height="50dp"
                 android:background="#CC32A4E0"
                 android:orientation="horizontal">
                 <LinearLayout
@@ -82,7 +82,7 @@
             <RelativeLayout
                 android:id="@+id/selected_place"
                 android:layout_width="match_parent"
-                android:layout_height="81dp"
+                android:layout_height="50dp"
                 android:background="#8032A4E0">
                 <LinearLayout
                     android:layout_width="wrap_content"
@@ -114,7 +114,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="18dp"
-                    android:layout_marginTop="142dp"
+                    android:layout_marginTop="7dp"
                     android:src="@drawable/question_type"
                     />
                 <LinearLayout
@@ -166,7 +166,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="18dp"
-                    android:layout_marginTop="87dp"
+                    android:layout_marginTop="7dp"
                     android:src="@drawable/question_when"
                     />
                 <LinearLayout
@@ -180,8 +180,8 @@
                         android:id="@+id/btn_select_date1"
                         android:layout_gravity="center_horizontal"
                         android:layout_width="379dp"
-                        android:layout_height="wrap_content"
-                        android:background="@drawable/button_background_non_select"
+                        android:layout_height="55dp"
+                        android:background="@drawable/button_date_non_select_white"
                         android:text="5월 28일"
                         android:textStyle="bold"
                         android:gravity="center"
@@ -190,8 +190,8 @@
                         android:id="@+id/btn_select_date2"
                         android:layout_gravity="center_horizontal"
                         android:layout_width="379dp"
-                        android:layout_height="wrap_content"
-                        android:background="@drawable/button_background_non_select"
+                        android:layout_height="55dp"
+                        android:background="@drawable/button_date_non_select_white"
                         android:text="5월 29일"
                         android:textStyle="bold"
                         android:gravity="center"
@@ -200,8 +200,8 @@
                         android:id="@+id/btn_select_date3"
                         android:layout_gravity="center_horizontal"
                         android:layout_width="379dp"
-                        android:layout_height="wrap_content"
-                        android:background="@drawable/button_background_non_select"
+                        android:layout_height="55dp"
+                        android:background="@drawable/button_date_non_select_white"
                         android:text="5월 30일"
                         android:textStyle="bold"
                         android:gravity="center"
@@ -210,8 +210,8 @@
                         android:id="@+id/btn_select_date4"
                         android:layout_gravity="center_horizontal"
                         android:layout_width="379dp"
-                        android:layout_height="wrap_content"
-                        android:background="@drawable/button_background_non_select"
+                        android:layout_height="55dp"
+                        android:background="@drawable/button_date_non_select_white"
                         android:text="5월 31일"
                         android:textStyle="bold"
                         android:gravity="center"
@@ -220,8 +220,8 @@
                         android:id="@+id/btn_select_date5"
                         android:layout_gravity="center_horizontal"
                         android:layout_width="379dp"
-                        android:layout_height="wrap_content"
-                        android:background="@drawable/button_background_non_select"
+                        android:layout_height="55dp"
+                        android:background="@drawable/button_date_non_select_white"
                         android:text="6월 1일"
                         android:textStyle="bold"
                         android:gravity="center"
@@ -230,8 +230,8 @@
                         android:id="@+id/btn_select_date6"
                         android:layout_gravity="center_horizontal"
                         android:layout_width="379dp"
-                        android:layout_height="wrap_content"
-                        android:background="@drawable/button_background_non_select"
+                        android:layout_height="55dp"
+                        android:background="@drawable/button_date_non_select_white"
                         android:text="6월 2일"
                         android:textStyle="bold"
                         android:gravity="center"
@@ -240,8 +240,8 @@
                         android:id="@+id/btn_select_date7"
                         android:layout_gravity="center_horizontal"
                         android:layout_width="379dp"
-                        android:layout_height="wrap_content"
-                        android:background="@drawable/button_background_non_select"
+                        android:layout_height="55dp"
+                        android:background="@drawable/button_date_non_select_white"
                         android:text="6월 3일"
                         android:textStyle="bold"
                         android:gravity="center"
@@ -340,7 +340,7 @@
             android:layout_height="70dp"
             android:background="#2B2825"
             android:gravity="bottom"
-            android:src="@drawable/text_okay"
+            android:src="@drawable/text_next"
             />
     </LinearLayout>
 
