--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -153,24 +153,18 @@
 </ScrollView>
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="4">
-        <Button
+        android:layout_height="match_parent">
+        <ImageButton
             android:id="@+id/btn_yamigu"
             android:layout_width="54dp"
             android:layout_height="54dp"
-            android:background="@drawable/button_yamigu"
+            android:background="@drawable/ic_filter_state"
+            android:src="@drawable/button_yamigu_noback_0"
             android:layout_alignParentBottom="true"
             android:layout_marginBottom="17dp"
             android:layout_marginRight="17dp"
             android:layout_alignParentRight="true"
-            android:text="0/3"
-            android:textColor="@color/colorPrimary"
-            android:textStyle="bold"
-            android:textSize="9sp"
-            android:gravity="center_horizontal|bottom"
-            android:paddingBottom="1dp"
             >
-        </Button>
+        </ImageButton>
     </RelativeLayout>
 </FrameLayout>
