--- a/app/src/main/res/layout/activity_meeting_application.xml
+++ b/app/src/main/res/layout/activity_meeting_application.xml
@@ -300,40 +300,59 @@
                         />
                 </LinearLayout>
             </LinearLayout>
-            <LinearLayout
+            <FrameLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/appeal_view"
-                android:orientation="vertical">
-                <ImageView
-                    android:id="@+id/question_appeal"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="18dp"
-                    android:layout_marginTop="7dp"
-                    android:src="@drawable/question_appeal"
-                    />
+                android:layout_height="match_parent">
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:id="@+id/appeal_view"
                     android:orientation="vertical">
-                    <EditText
-                        android:id="@+id/edittext_appeal"
-                        android:layout_width="379dp"
+                    <ImageView
+                        android:id="@+id/question_appeal"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:background="@drawable/textbox_appeal"
-                        android:layout_marginTop="23dp"
-                        android:layout_gravity="center"
-                        android:gravity="top"
-                        android:paddingLeft="28dp"
-                        android:paddingRight="28dp"
-                        android:paddingTop="19dp"
-                        android:paddingBottom="19dp"
+                        android:layout_marginLeft="18dp"
+                        android:layout_marginTop="7dp"
+                        android:src="@drawable/question_appeal"
                         />
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical">
+                        <EditText
+                            android:id="@+id/edittext_appeal"
+                            android:layout_width="379dp"
+                            android:layout_height="wrap_content"
+                            android:background="@drawable/textbox_appeal"
+                            android:layout_marginTop="23dp"
+                            android:layout_gravity="center"
+                            android:gravity="top"
+                            android:paddingLeft="28dp"
+                            android:paddingRight="28dp"
+                            android:paddingTop="19dp"
+                            android:paddingBottom="19dp"
+                            />
+                    </LinearLayout>
                 </LinearLayout>
-            </LinearLayout>
-        </LinearLayout>
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+                    <TextView
+                        android:id="@+id/max_appeal_length"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentRight="true"
+                        android:layout_marginRight="30dp"
+                        android:layout_marginTop="305dp"
 
+                        android:textColor="#444444"
+                        />
+                </RelativeLayout>
+            </FrameLayout>
+
+
+        </LinearLayout>
         <ImageButton
             android:id="@+id/btn_okay"
             android:layout_width="match_parent"
