home fragment toolbar fixed when scroll

--- a/app/src/main/res/layout/fragment_mypage.xml
+++ b/app/src/main/res/layout/fragment_mypage.xml
@@ -65,7 +65,7 @@
             android:layout_marginTop="35dp"/>
         <ImageButton
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="100dp"
             android:layout_gravity="center_horizontal"
             android:scaleType="fitXY"
             android:layout_marginTop="16dp"
