--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -87,6 +87,8 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_gravity="center_vertical"
+                                android:layout_marginLeft="20dp"
+                                app:label="1"
                                 app:description="한명이 술을 잘 못마셔요!"
                                 app:profile1="연세대학교 (24)"
                                 app:profile2="전기전자공학부"
@@ -99,7 +101,8 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_gravity="center_vertical"
-                                android:layout_marginLeft="-18dp"
+                                android:layout_marginLeft="20dp"
+                                app:label="2"
                                 app:date="5월28일"
                                 app:description="한명이 술을 잘 못마셔요!"
                                 app:place="신촌/홍대"
