--- a/app/src/main/res/drawable/rectangle_orange_solid.xml
+++ b/app/src/main/res/drawable/rectangle_orange_solid.xml
@@ -1,11 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <solid android:color="#FFFFFF"/>
-    <stroke android:width="1dip" android:color="#E0E0E0" />
-    <corners
-        android:topLeftRadius="12dip"
-        android:topRightRadius="12dip"
-        android:bottomLeftRadius="12dip"
-        android:bottomRightRadius="12dip"/>
+    <stroke android:width="1dip" android:color="@color/colorPoint" />
     <padding android:left="0dip" android:top="0dip" android:right="0dip" android:bottom="0dip" />
 </shape>
