--- a/app/src/main/res/layout/my_meeting_card.xml
+++ b/app/src/main/res/layout/my_meeting_card.xml
@@ -5,7 +5,7 @@
     android:layout_height="166dp"
     android:layout_width="match_parent"
     android:orientation="vertical"
-    android:background="@drawable/rounded">
+    android:background="@drawable/top_rounded">
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
