add onclick event & animation to meeting card in Wlist_Fragment

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="colorPoint">#FC903B</color>
     <color name="color3vs3">#FF6024</color>
     <color name="color4vs4">#FF4600</color>
+    <color name="colorBrown">#383633</color>
 </resources>
