--- a/app/src/main/res/layout/meeting_team_home.xml
+++ b/app/src/main/res/layout/meeting_team_home.xml
@@ -4,12 +4,12 @@
     android:id="@+id/bg"
     android:layout_height="222dp"
     android:layout_width="293dp"
-    android:orientation="vertical"
-    android:background="@drawable/meeting_card_bg_home">
+    android:orientation="vertical">
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="166dp"
+        android:orientation="vertical"
+        android:background="@drawable/top_rounded">
         <ImageView
             android:id="@+id/label"
             android:src="@drawable/label_2vs2"
@@ -48,17 +48,29 @@
                 android:gravity="center_horizontal|center_vertical"
                 android:textColor="#FF8424"/>
         </LinearLayout>
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="57dp"
+        android:orientation="vertical">
+        <ImageView
+            android:id="@+id/point_line"
+            android:layout_height="5dp"
+            android:layout_width="match_parent"
+            android:background="@color/colorPoint">
+        </ImageView>
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="57dp"
+            android:layout_height="52dp"
             android:layout_gravity="bottom"
             android:orientation="horizontal"
+            android:background="@drawable/bottom_rounded_brown"
             >
             <LinearLayout
                 android:layout_width="127.5dp"
                 android:layout_height="match_parent"
                 android:orientation="vertical"
-                android:layout_marginTop="11dp"
+                android:layout_marginTop="4.5dp"
                 android:layout_marginBottom="11dp"
                 android:layout_marginLeft="19dp">
                 <TextView
@@ -67,6 +79,7 @@
                     android:layout_height="wrap_content"
                     android:text="연세대학교 (24)"
                     android:textStyle="bold"
+                    android:textSize="14dp"
                     android:textColor="@color/colorPrimary"
                     />
                 <TextView
@@ -74,14 +87,15 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="전기전자공학부"
-                    android:textStyle="bold"
-                    android:textColor="@color/colorPrimary"/>
+                    android:textSize="12dp"
+                    android:textColor="@color/colorPrimary"
+                    android:layout_marginTop="1dp"/>
             </LinearLayout>
             <LinearLayout
                 android:layout_width="127.5dp"
                 android:layout_height="match_parent"
                 android:orientation="vertical"
-                android:layout_marginTop="11dp"
+                android:layout_marginTop="4.5dp"
                 android:layout_marginBottom="11dp"
                 android:layout_marginRight="19dp">
                 <TextView
@@ -90,6 +104,7 @@
                     android:layout_height="wrap_content"
                     android:gravity="right"
                     android:text="5월28일"
+                    android:textSize="12dp"
                     android:textStyle="bold"
                     android:textColor="@color/colorPrimary"
                     />
@@ -99,8 +114,10 @@
                     android:layout_height="wrap_content"
                     android:gravity="right"
                     android:text="신촌/홍대"
+                    android:textSize="12dp"
                     android:textStyle="bold"
-                    android:textColor="@color/colorPrimary"/>
+                    android:textColor="@color/colorPrimary"
+                    android:layout_marginTop="1dp"/>
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
