--- a/app/src/main/res/layout/meeting_team_wlist.xml
+++ b/app/src/main/res/layout/meeting_team_wlist.xml
@@ -5,11 +5,112 @@
     android:layout_height="222dp"
     android:layout_width="351.8dp"
     android:orientation="vertical"
-    android:background="@drawable/meeting_card_bg_wlist">
+    >
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="57dp"
+            android:layout_gravity="bottom">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+                <ImageView
+                    android:id="@+id/point_line"
+                    android:layout_height="5dp"
+                    android:layout_width="match_parent"
+                    android:background="@color/colorPoint">
+                </ImageView>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="52dp"
+                    android:layout_gravity="bottom"
+                    android:orientation="horizontal"
+                    android:background="@drawable/bottom_rounded_brown"
+                    >
+                    <LinearLayout
+                        android:layout_width="133.9dp"
+                        android:layout_height="match_parent"
+                        android:orientation="vertical"
+                        android:layout_marginTop="4.5dp"
+                        android:layout_marginBottom="11dp"
+                        android:layout_marginLeft="42dp"
+                        >
+                        <TextView
+                            android:id="@+id/profile1"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="연세대학교 (24)"
+                            android:textSize="14dp"
+                            android:textStyle="bold"
+                            android:textColor="@color/colorPrimary"
+                            />
+                        <TextView
+                            android:id="@+id/profile2"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="전기전자공학부"
+                            android:textSize="12dp"
+                            android:textColor="@color/colorPrimary"
+                            android:layout_marginTop="1dp"/>
+                    </LinearLayout>
+                    <LinearLayout
+                        android:layout_width="133.9dp"
+                        android:layout_height="match_parent"
+                        android:orientation="vertical"
+                        android:layout_marginTop="4.5dp"
+                        android:layout_marginBottom="11dp"
+                        android:layout_marginRight="42dp">
+                        <TextView
+                            android:id="@+id/date"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:gravity="right"
+                            android:text="5월28일"
+                            android:textSize="12dp"
+                            android:textStyle="bold"
+                            android:textColor="@color/colorPrimary"
+                            />
+                        <TextView
+                            android:id="@+id/place"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:gravity="right"
+                            android:text="신촌/홍대"
+                            android:textSize="12dp"
+                            android:textStyle="bold"
+                            android:textColor="@color/colorPrimary"
+                            android:layout_marginTop="1dp"/>
+                    </LinearLayout>
+                </LinearLayout>
+            </LinearLayout>
+        </FrameLayout>
+    <RelativeLayout
+        android:id="@+id/rl_applying"
+        android:layout_width="match_parent"
+        android:layout_height="52dp"
+        android:background="@drawable/bottom_rounded_orange"
+        android:visibility="invisible"
+        android:layout_gravity="bottom"
+        android:layout_marginBottom="52dp">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center_vertical|center_horizontal"
+            android:text="미팅 신청하기"
+            android:textColor="@color/colorPrimary"
+            android:textStyle="bold"
+            android:textSize="14dp"
+            android:layout_marginBottom="5dp"/>
+    </RelativeLayout>
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="165dp"
+        android:orientation="vertical"
+        android:background="@drawable/top_rounded"
+        >
         <ImageView
             android:id="@+id/label"
             android:src="@drawable/label_2vs2"
@@ -48,61 +149,8 @@
                 android:gravity="center_horizontal|center_vertical"
                 android:textColor="#FF8424"/>
         </LinearLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="57dp"
-            android:layout_gravity="bottom"
-            android:orientation="horizontal"
-            >
-            <LinearLayout
-                android:layout_width="133.9dp"
-                android:layout_height="match_parent"
-                android:orientation="vertical"
-                android:layout_marginTop="11dp"
-                android:layout_marginBottom="11dp"
-                android:layout_marginLeft="42dp">
-                <TextView
-                    android:id="@+id/profile1"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="연세대학교 (24)"
-                    android:textStyle="bold"
-                    android:textColor="@color/colorPrimary"
-                    />
-                <TextView
-                    android:id="@+id/profile2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="전기전자공학부"
-                    android:textStyle="bold"
-                    android:textColor="@color/colorPrimary"/>
-            </LinearLayout>
-            <LinearLayout
-                android:layout_width="133.9dp"
-                android:layout_height="match_parent"
-                android:orientation="vertical"
-                android:layout_marginTop="11dp"
-                android:layout_marginBottom="11dp"
-                android:layout_marginRight="42dp">
-                <TextView
-                    android:id="@+id/date"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="right"
-                    android:text="5월28일"
-                    android:textStyle="bold"
-                    android:textColor="@color/colorPrimary"
-                    />
-                <TextView
-                    android:id="@+id/place"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="right"
-                    android:text="신촌/홍대"
-                    android:textStyle="bold"
-                    android:textColor="@color/colorPrimary"/>
-            </LinearLayout>
-        </LinearLayout>
     </LinearLayout>
 
+
+    </FrameLayout>
 </LinearLayout>
