--- a/app/src/main/res/layout/meeting_team_wlist.xml
+++ b/app/src/main/res/layout/meeting_team_wlist.xml
@@ -106,6 +106,7 @@
             android:layout_marginBottom="5dp"/>
     </RelativeLayout>
     <LinearLayout
+        android:id="@+id/top_bg"
         android:layout_width="match_parent"
         android:layout_height="165dp"
         android:orientation="vertical"
