double thumb seekbar

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="color3vs3">#FF6024</color>
     <color name="color4vs4">#FF4600</color>
     <color name="colorBrown">#383633</color>
+    <color name="colorGray">#707070</color>
 </resources>
