--- a/app/src/main/res/layout/fragment_filter_set.xml
+++ b/app/src/main/res/layout/fragment_filter_set.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:rsb="http://schemas.android.com/tools"
     android:background="@color/colorPrimary">
     <LinearLayout
         android:orientation="vertical"
@@ -33,6 +34,7 @@
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="7dp">
             <Button
+                android:id="@+id/btn_type_2vs2"
                 android:layout_width="wrap_content"
                 android:layout_height="30dp"
                 android:background="@drawable/rounded_gray_solid"
@@ -43,6 +45,7 @@
                 >
             </Button>
             <Button
+                android:id="@+id/btn_type_3vs3"
                 android:layout_width="wrap_content"
                 android:layout_height="30dp"
                 android:background="@drawable/rounded_gray_solid"
@@ -55,6 +58,7 @@
                 >
             </Button>
             <Button
+                android:id="@+id/btn_type_4vs4"
                 android:layout_width="wrap_content"
                 android:layout_height="30dp"
                 android:background="@drawable/rounded_gray_solid"
@@ -80,6 +84,7 @@
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="7dp">
             <Button
+                android:id="@+id/btn_place_1"
                 android:layout_width="wrap_content"
                 android:layout_height="30dp"
                 android:background="@drawable/rounded_gray_solid"
@@ -90,6 +95,7 @@
                 >
             </Button>
             <Button
+                android:id="@+id/btn_place_2"
                 android:layout_width="wrap_content"
                 android:layout_height="30dp"
                 android:background="@drawable/rounded_gray_solid"
@@ -101,13 +107,8 @@
                 android:layout_marginRight="23dp"
                 >
             </Button>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="30dp"
-                android:layout_weight="13"
-                android:background="#FFFFFF"
-                android:src="@null"/>
             <Button
+                android:id="@+id/btn_place_3"
                 android:layout_width="wrap_content"
                 android:layout_height="30dp"
                 android:background="@drawable/rounded_gray_solid"
@@ -126,45 +127,67 @@
             android:text="나이"
             android:textColor="#000000"
             android:textSize="20dp"/>
+
         <LinearLayout
-            android:layout_width="323dp"
+            android:layout_width="345dp"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="7dp">
             <FrameLayout
-                android:layout_width="323dp"
+                android:layout_width="345dp"
                 android:layout_height="21dp"
                 >
                 <ImageView
-                    android:layout_width="match_parent"
+                    android:layout_width="324dp"
                     android:layout_height="1dp"
                     android:background="@color/colorPoint"
-                    android:layout_gravity="center_vertical"
+                    android:layout_gravity="center_vertical|center_horizontal"
                     />
+                <RelativeLayout
+                    android:layout_width="324dp"
+                    android:layout_height="1dp"
+                    android:layout_gravity="center_vertical|center_horizontal">
+                    <ImageView
+                        android:id="@+id/iv_minimum_age_bg_deactivate"
+                        android:layout_width="0dp"
+                        android:layout_height="1dp"
+                        android:background="@color/colorGray"
+                        android:layout_alignParentLeft="true"/>
+                    <ImageView
+                        android:id="@+id/iv_maximum_age_bg_deactivate"
+                        android:layout_width="0dp"
+                        android:layout_height="1dp"
+                        android:background="@color/colorGray"
+                        android:layout_alignParentRight="true"/>
+                </RelativeLayout>
                 <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
                     <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:id="@+id/iv_minimum_age"
+                        android:layout_width="21dp"
+                        android:layout_height="21dp"
                         android:src="@drawable/rectangle"
                         android:layout_alignParentLeft="true"
                         />
                     <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:id="@+id/iv_maximum_age"
+                        android:layout_width="21dp"
+                        android:layout_height="21dp"
                         android:src="@drawable/rectangle"
                         android:layout_alignParentRight="true"/>
                 </RelativeLayout>
             </FrameLayout>
+
         </LinearLayout>
         <RelativeLayout
-            android:layout_width="331dp"
+            android:layout_width="345dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="7dp">
             <TextView
+                android:id="@+id/tv_minimum_age"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="20살"
@@ -173,6 +196,7 @@
                 android:textStyle="bold"
                 android:layout_alignParentLeft="true"/>
             <TextView
+                android:id="@+id/tv_maximum_age"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="30+살"
@@ -181,6 +205,7 @@
                 android:textStyle="bold"
                 android:layout_alignParentRight="true"/>
         </RelativeLayout>
+
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
